--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -212,9 +212,6 @@ img {
     justify-content: space-between;
 }
 
-.footer{
-    
-}
 
 
 @media only screen and (max-width: 767px) {
@@ -341,6 +338,12 @@ img {
     .tipoplanes h2 {
         font-size: 2rem;
     }
+
+    .adquirir{
+        display: none;
+    }
+
+    
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
