--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -5,7 +5,8 @@ img {
 .scroll {
     display: none;
 }
-.footer{
+
+.footer {
     z-index: 4;
     width: 100%;
     margin-top: 9rem;
@@ -108,14 +109,24 @@ img {
     font-size: 1.7rem;
 }
 
-
+@media (width: 430px) {
+    .textp1 {
+        margin-left: 2.5rem !important;
+    }
+}
 
 @media(max-width: 767px) {
 
     .welcome {
         background-position: right;
-        height: 72rem;
+        height: 100%;
         margin-top: 0;
+        padding-bottom: 5rem;
+        top: 0;
+    }
+
+    .footer {
+        margin-top: 20rem !important;
     }
 
     .transforma {
@@ -123,35 +134,50 @@ img {
     }
 
     .textp1 {
-        margin-left: 0;
+        padding-top: 1rem;
         width: 20rem;
-        margin-left: 2rem;
+        margin-left: 1rem;
     }
 
-    #imgfamilia2,
-    .textfamilia2,
+
     #h2delete,
-    #big {
+    .imgfamilia2 {
         display: none;
+    }
+
+    .imgfamilia {
+        left: 0;
+        top: 65rem;
     }
 
     .textp1 h2 {
         font-size: 3rem;
     }
 
-    .scroll {
-        display: block;
-        width: 20rem;
-        margin-top: 5rem;
-        position: relative;
-        right: 1rem;
+    #big {
+        width: 100%;
+        margin-top: 3rem;
+        margin-left: 0;
+        font-size: 1.5rem;
+        background-color: rgb(0, 92, 115);
+        padding: 1rem;
+        border-radius: 1rem;
     }
-
-    
 }
 
-@media (width: 430px){
-    .scroll{
+.textfamilia2 {
+    left: 4rem;
+    z-index: 3;
+    bottom: 22rem;
+}
+
+.textfamilia2 p {
+    display: none;
+}
+
+
+@media (width: 430px) {
+    .scroll {
         margin-left: 1.2rem;
     }
 }
@@ -195,9 +221,11 @@ img {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .imgfamilia {
-        display: none;;
+        display: none;
+        ;
     }
-    .imgfamilia img{
+
+    .imgfamilia img {
         width: 30rem;
     }
 
@@ -236,7 +264,8 @@ img {
         font-size: 7rem;
         width: fit-content;
     }
-    .textp1 h1{
+
+    .textp1 h1 {
         width: fit-content;
     }
 
@@ -247,11 +276,11 @@ img {
         margin-left: 2rem;
     }
 
-    .footer{
+    .footer {
         position: relative;
         top: 25rem;
     }
-    
+
 }
 
 
@@ -263,7 +292,8 @@ img {
         bottom: 5rem;
         z-index: 1;
     }
-    .imgfamilia img{
+
+    .imgfamilia img {
         width: 45rem;
     }
 
@@ -282,17 +312,17 @@ img {
         width: 50rem;
         margin-left: 5rem;
     }
-    .footer{
+
+    .footer {
         position: relative;
         z-index: 4;
-        margin-top: 15rem;
+        margin-top: 25rem;
     }
 
     .imgfamilia2 {
         box-shadow: none;
     }
 
-    .textfamilia2,
     #h2delete,
     .scroll {
         display: none;
@@ -302,20 +332,30 @@ img {
         font-size: 4rem;
     }
 
-
-    .scroll {
-        display: block;
-        width: 20rem;
-        margin-top: 5rem;
-        margin-left: 2rem;
+    .textfamilia2 {
+        z-index: 4;
+        left: 5rem;
+        bottom: 50rem;
+        left: 60rem;
+        background-color: rebeccapurple;
+        padding: 1rem;
+        border-radius: 1rem;
     }
+
+    .textfamilia2 p {
+        display: block;
+        color: whitesmoke;
+
+    }
+
 }
 
-@media only screen and (min-width: 1600px) and (max-width: 1800px){
-    .transforma{
+@media only screen and (min-width: 1600px) and (max-width: 1800px) {
+    .transforma {
         left: 23rem;
     }
-    .textfamilia2{
+
+    .textfamilia2 {
         left: 75rem;
     }
 }
