--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -89,15 +89,14 @@ img {
 }
 
 .textp1 h2 {
-    font-size: 6rem;
+    font-size: 5rem;
     margin: 0;
 }
-
-
 
 .textp1 h1 {
     margin: 0;
     font-size: 6rem;
+    width: 100%;
     font-weight: 700;
 }
 
@@ -140,19 +139,27 @@ img {
     }
 
 
-    #h2delete,
     .imgfamilia2 {
         display: none;
     }
 
     .imgfamilia {
         left: 0;
-        top: 65rem;
+        top: 60rem;
     }
 
     .textp1 h2 {
-        font-size: 3rem;
+        font-size: 2rem;
+        font-weight: 700;
+
     }
+    .textp1 h1{
+        font-size: 4rem;
+        margin-bottom: 1rem;
+        position: relative;
+        width: 24rem;
+    }
+
 
     #big {
         width: 100%;
@@ -166,9 +173,9 @@ img {
 }
 
 .textfamilia2 {
-    left: 4rem;
+    left: 5rem;
     z-index: 3;
-    bottom: 22rem;
+    bottom: 28rem;
 }
 
 .textfamilia2 p {
