--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -119,7 +119,7 @@ img {
     .welcome {
         background-position: right;
         height: 100%;
-        margin-top: 0;
+        margin-top: 0rem;
         padding-bottom: 5rem;
         top: 0;
     }
@@ -133,7 +133,7 @@ img {
     }
 
     .textp1 {
-        padding-top: 1rem;
+        padding-top: 3rem;
         width: 20rem;
         margin-left: 1rem;
     }
@@ -153,11 +153,12 @@ img {
         font-weight: 700;
 
     }
-    .textp1 h1{
-        font-size: 4rem;
+
+    .textp1 h1 {
+        font-size: 3.5rem;
         margin-bottom: 1rem;
         position: relative;
-        width: 24rem;
+        width: 23rem;
     }
 
 
@@ -173,7 +174,7 @@ img {
 }
 
 .textfamilia2 {
-    left: 5rem;
+    left: 4rem;
     z-index: 3;
     bottom: 28rem;
 }
@@ -187,6 +188,47 @@ img {
     .scroll {
         margin-left: 1.2rem;
     }
+
+    .textp1 {
+        padding-top: 3rem;
+        width: 20rem;
+        margin-left: 1rem;
+    }
+
+
+    .imgfamilia2 {
+        display: none;
+    }
+
+    .imgfamilia {
+        left: 0;
+        top: 60rem;
+    }
+
+    .textp1 h2 {
+        font-size: 2rem;
+        font-weight: 700;
+
+    }
+
+    .textp1 h1 {
+        font-size: 4rem;
+        margin-bottom: 1rem;
+        position: relative;
+        width: 24rem;
+    }
+
+    .textfamilia2 {
+        left: 5rem;
+        z-index: 3;
+        bottom: 28rem;
+    }
+
+
+
+
+
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
