--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -116,7 +116,7 @@ img {
     }
 
     .formp4 input {
-        font-size: 1rem;
+        font-size: 1.3rem;
         border-radius: .9rem;
         width: 20rem;
         padding-left: 2rem;
@@ -126,6 +126,17 @@ img {
         padding-top: 0;
         padding-bottom: 0;
     }
+
+    .formp4 input::placeholder {
+        font-size: 1.3rem;
+    }
+}
+
+@media (width: 430px){
+    .formp4{
+        margin-left: 1.4rem;
+        border-radius: 1rem;
+    }    
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
