--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -219,40 +219,244 @@
     margin-top: 0;
 }
 
-.noMember{
+.noMember {
     background-color: rgb(52, 52, 52);
     border-radius: 1rem;
     padding: 2rem;
 }
-.noMember h2{
+
+.noMember h2 {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: 2rem;
     color: white;
     width: 30rem;
     margin-left: 6rem;
-    
+
+}
+
+.form2b {
+    background-color: rgb(52, 52, 52);
+    padding: 1rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 70%;
+    font-family: 'Lato', sans-serif;
+}
+
+.form2b h1 {
+    background: none;
+    color: white;
+    font-size: 2rem;
+    font-style: normal;
+    text-align: center;
+    width: 100%;
+}
+
+.form2b .caja {
+    flex: 1;
+    width: 100%;
+    margin-right: 2rem;
+}
+
+.form2b .caja p {
+    font-size: 1.2rem;
+    width: max-content;
+    margin-bottom: .6rem;
+}
+
+.form2b .caja h2 {
+    font-size: 1.6rem;
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: rgb(95, 95, 95);
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.form2b h2 {
+    width: 90%;
+}
+
+.form2b #pending {
+    font-size: 2rem;
+    width: max-content;
+    background-color: gainsboro;
+    color: rgb(95, 95, 95);
+    padding: 1rem;
+    font-weight: 900;
+    border-radius: 1rem;
+    text-align: center;
+    margin-top: 2.7rem;
+}
+
+#quinqueniob {
+    font-size: 1.7rem;
+    width: max-content;
+    background-color: gainsboro;
+    color: rgb(95, 95, 95);
+    padding: 1rem;
+    font-weight: 900;
+    margin-top: 2.8rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+
+#wallet {
+    width: 100%;
+    margin-left: 4.5rem;
+}
+
+#bonificacionh1b {
+    background-color: gainsboro;
+    color: rgb(95, 95, 95);
+    border-radius: 1rem;
+    padding: .5rem 0 .5rem 0;
+    font-weight: 900;
+    font-style: italic;
+    margin-left: 0;
+}
+
+.containerfechasb {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.containerfechasb .caja h2 {
+    width: 90%;
+}
+
+#paddi {
+    margin-bottom: 4rem;
 }
 
 @media only screen and (max-width: 767px) {
+    .form2b {
+        background-color: rgb(52, 52, 52);
+        padding: 1rem;
+        border-radius: 1rem;
+        margin-left: .5rem;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 83%;
+        font-family: 'Lato', sans-serif;
+    }
 
-    #nomemberh1{
+    .form2b h1 {
+        background: none;
+        color: white;
+        font-size: 2rem;
+        font-style: normal;
+        text-align: center;
+        width: 100%;
+    }
+
+    .form2b #datosmemb {
+        font-size: 2.5rem;
+        margin-left: 0;
+    }
+
+    .form2b .caja {
+        flex: 1;
+        width: 100%;
+        margin-right: 2rem;
+    }
+
+    .form2b .caja p {
+        font-size: 1.2rem;
+        width: max-content;
+        margin-bottom: .6rem;
+    }
+
+    .form2b .caja h2 {
+        font-size: 1.6rem;
+        background-color: rgb(255, 255, 255);
+        padding: 1rem;
+        border-radius: 1rem;
+        color: rgb(95, 95, 95);
+        font-weight: 900;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .form2b h2 {
+        width: 100%;
+    }
+
+    .form2b #pending {
+        font-size: 1.5rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: 1rem;
+        font-weight: 900;
+        border-radius: 1rem;
+        text-align: center;
+        margin-top: 1.5rem;
+    }
+
+    #quinqueniob {
+        font-size: 1.7rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: 1rem;
+        font-weight: 900;
+        margin-top: 0rem;
+        border-radius: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    #wallet {
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    #bonificacionh1b {
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        border-radius: 1rem;
+        padding: .5rem 0 .5rem 0;
+        font-weight: 900;
+        font-style: italic;
+        margin-left: 0;
+        font-size: 1.5rem;
+    }
+
+    .containerfechasb {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .containerfechasb .caja h2 {
+        width: 90%;
+    }
+
+    #paddi {
+        margin-bottom: 0rem;
+    }
+
+
+    #nomemberh1 {
         font-size: 1.7rem;
         margin-left: 0rem;
         padding: 1rem;
         width: 18rem;
     }
 
-    .noMember h2{
+    .noMember h2 {
         font-size: 1.4rem;
         width: 20rem;
         margin-left: 1rem;
     }
 
-    .noMember{
+    .noMember {
         width: 82%;
     }
-    
+
     .profilecontainer {
         flex-direction: column;
     }
@@ -393,7 +597,7 @@
 
 }
 
-@media (width: 430px){
+@media (width: 430px) {
     .formprofile1 {
         margin-left: 2.4rem;
     }
@@ -402,6 +606,115 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    .form2b {
+        background-color: rgb(52, 52, 52);
+        padding: 1rem;
+        border-radius: 1rem;
+        margin-left: .5rem;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 83%;
+        font-family: 'Lato', sans-serif;
+    }
+
+    .form2b h1 {
+        background: none;
+        color: white;
+        font-size: 2rem;
+        font-style: normal;
+        text-align: center;
+        width: 100%;
+    }
+
+    .form2b #datosmemb {
+        font-size: 2.5rem;
+        margin-left: 0;
+    }
+
+    .form2b .caja {
+        flex: 1;
+        width: 100%;
+        margin-right: 2rem;
+    }
+
+    .form2b .caja p {
+        font-size: 1.2rem;
+        width: max-content;
+        margin-bottom: .6rem;
+    }
+
+    .form2b .caja h2 {
+        font-size: 1.6rem;
+        background-color: rgb(255, 255, 255);
+        padding: 1rem;
+        border-radius: 1rem;
+        color: rgb(95, 95, 95);
+        font-weight: 900;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .form2b h2 {
+        width: 100%;
+    }
+
+    .form2b #pending {
+        font-size: 1.5rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: 1rem;
+        font-weight: 900;
+        border-radius: 1rem;
+        text-align: center;
+        margin-top: 3.2rem;
+    }
+
+    #quinqueniob {
+        font-size: 1.7rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: .5rem;
+        margin-left: 2rem;
+        font-weight: 900;
+        margin-top: 2rem;
+        border-radius: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    #wallet {
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    #bonificacionh1b {
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        border-radius: 1rem;
+        padding: .5rem 0 .5rem 0;
+        height: fit-content;
+        width: 100%;
+        font-weight: 900;
+        font-style: italic;
+        margin-left: 0;
+        font-size: 1.5rem;
+    }
+
+    .containerfechasb {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .containerfechasb .caja h2 {
+        width: 90%;
+    }
+
+    #paddi {
+        margin-bottom: 0rem;
+    }
+
 
 
     .profilecontainer {
@@ -548,6 +861,115 @@
 
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .form2b {
+        background-color: rgb(52, 52, 52);
+        padding: 1rem;
+        border-radius: 1rem;
+        margin-left: .5rem;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 83%;
+        font-family: 'Lato', sans-serif;
+    }
+
+    .form2b h1 {
+        background: none;
+        color: white;
+        font-size: 2rem;
+        font-style: normal;
+        text-align: center;
+        width: 100%;
+    }
+
+    .form2b #datosmemb {
+        font-size: 2.5rem;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .form2b .caja {
+        flex: 1;
+        width: 100%;
+        margin-right: 2rem;
+    }
+
+    .form2b .caja p {
+        font-size: 1.2rem;
+        width: max-content;
+        margin-bottom: .6rem;
+    }
+
+    .form2b .caja h2 {
+        font-size: 1.6rem;
+        background-color: rgb(255, 255, 255);
+        padding: 1rem;
+        border-radius: 1rem;
+        color: rgb(95, 95, 95);
+        font-weight: 900;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .form2b h2 {
+        width: 100%;
+    }
+
+    .form2b #pending {
+        font-size: 1.5rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: 1rem;
+        font-weight: 900;
+        border-radius: 1rem;
+        text-align: center;
+        margin-top: 3.2rem;
+    }
+
+    #quinqueniob {
+        font-size: 1.7rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: .5rem;
+        margin-left: 2rem;
+        font-weight: 900;
+        margin-top: 2rem;
+        border-radius: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    #wallet {
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    #bonificacionh1b {
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        border-radius: 1rem;
+        padding: .5rem 0 .5rem 0;
+        height: fit-content;
+        width: 100%;
+        font-weight: 900;
+        font-style: italic;
+        margin-left: 0;
+        font-size: 1.5rem;
+    }
+
+    .containerfechasb {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .containerfechasb .caja h2 {
+        width: 90%;
+    }
+
+    #paddi {
+        margin-bottom: 0rem;
+    }
+
     .profilecontainer {
         flex-direction: column;
     }
@@ -561,7 +983,7 @@
     .formprofile2 {
         max-width: 800px;
         margin-left: 12rem;
-        margin-bottom:20rem;
+        margin-bottom: 20rem;
     }
 
     .formprofile1 h1 {
@@ -696,13 +1118,123 @@
 
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
 
-    .noMember{
+    .form2b {
+        background-color: rgb(52, 52, 52);
+        padding: 1rem;
+        border-radius: 1rem;
+        margin-left: .5rem;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 83%;
+        font-family: 'Lato', sans-serif;
+    }
+
+    .form2b h1 {
+        background: none;
+        color: white;
+        font-size: 2rem;
+        font-style: normal;
+        text-align: center;
+        width: 100%;
+    }
+
+    .form2b #datosmemb {
+        font-size: 2.5rem;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .form2b .caja {
+        flex: 1;
+        width: 100%;
+        margin-right: 4rem;
+    }
+
+    .form2b .caja p {
+        font-size: 1.2rem;
+        width: max-content;
+        margin-bottom: .6rem;
+    }
+
+    .form2b .caja h2 {
+        font-size: 1.6rem;
+        background-color: rgb(255, 255, 255);
+        padding: 1rem;
+        border-radius: 1rem;
+        color: rgb(95, 95, 95);
+        font-weight: 900;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .form2b h2 {
+        width: 100%;
+    }
+
+    .form2b #pending {
+        font-size: 1.5rem;
+        width: 100%;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: 1rem;
+        font-weight: 900;
+        border-radius: 1rem;
+        text-align: center;
+        margin-top: 3.2rem;
+    }
+
+    #quinqueniob {
+        font-size: 1.7rem;
+        width: max-content;
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        padding: .5rem;
+        margin-left: 2rem;
+        font-weight: 900;
+        margin-top: 3.5rem;
+        border-radius: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    #wallet {
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    #bonificacionh1b {
+        background-color: gainsboro;
+        color: rgb(95, 95, 95);
+        border-radius: 1rem;
+        padding: .5rem 0 .5rem 0;
+        height: fit-content;
+        width: 100%;
+        font-weight: 900;
+        font-style: italic;
+        margin-left: 0;
+        font-size: 1.5rem;
+    }
+
+    .containerfechasb {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .containerfechasb .caja h2 {
+        width: 90%;
+    }
+
+    #paddi {
+        margin-bottom: 0rem;
+    }
+
+    .noMember {
         width: 85%;
     }
 
-    .noMember h2{
+    .noMember h2 {
         margin-left: 2rem;
     }
+
     .formprofile1 {
         margin-left: 3rem;
     }
