--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -212,9 +212,26 @@ img {
     justify-content: space-between;
 }
 
-
+.notAuth{
+    width:80%;
+    font-size: 5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: rgb(0, 63, 89);
+    color: white;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-left: 10rem;
+    margin-top: 5rem;
+    font-weight: 700;
+}
 
 @media only screen and (max-width: 767px) {
+
+    .notAuth{
+        width: 80%;
+        margin-left: 1.5rem;
+        font-size: 3rem;
+    }
 
     .ac {
         display: block;
@@ -347,6 +364,12 @@ img {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    .notAuth{
+        width: 90%;
+        margin-left: 1.5rem;
+        font-size: 3rem;
+    }
     .escoge {
         display: none;
     }
@@ -461,6 +484,11 @@ img {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .notAuth{
+        width: 90%;
+        margin-left: 2rem;
+        font-size: 3rem;
+    }
     .escoge {
         display: none;
     }
