add fetch old api

--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -35,6 +35,10 @@
 }
 
 @media (max-width: 767px) {
+
+    #scrolleable{
+        width: 100%;
+    }
     .modal5 h1 {
         font-size: 1.3rem;
         background-color: white;
