--- a/src/styles/Modal1.css
+++ b/src/styles/Modal1.css
@@ -10,6 +10,7 @@
 
 #scrolleable {
     overflow-y: auto;
+
 }
 
 .membresiaModal1 h3 {
@@ -78,8 +79,26 @@
 
 
 @media (max-width: 767px) {
+
+    #scrolleable{
+        height: 70%;
+        width: 70%;
+    }
     #botonadquirirmodal {
         font-size: 2rem;
+    }
+
+    .slide2{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .slide2 input{
+        margin-bottom: 2rem;
+    }
+
+    .slide2 output{
+        margin-left: 0;
     }
 
 
