--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -57,6 +57,8 @@ img {
 }
 
 #afiliarsebutton {
+    cursor: pointer;
+
     font-family: 'Monserrat', sans-serif;
     font-weight: 700;
     font-size: 2rem;
@@ -109,6 +111,7 @@ img {
     }
     .formp4 button{
         margin-bottom: 5rem;
+
 
     }
     .buttonslogin button{
