--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -4,6 +4,21 @@
     display: flex;
 }
 
+.alert1{
+    background-color: rgb(52, 52, 52);
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    width: 90%;
+    padding: 0 2rem;
+    border-radius: 1rem;
+}
+
+.alert1 h5{
+    padding: 1rem 0;
+}
+
 .leyenda {
     background-color: rgb(52, 52, 52);
     width: 100%;
@@ -384,7 +399,30 @@
     max-width: 35%;
 }
 
+.form1 h2{
+    overflow: auto;
+
+
+    &::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(3, 180, 211);
+        border-radius: 4px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: rgb(2, 80, 116);
+    }
+}
+
 @media only screen and (max-width: 767px) {
+
+    .alert1{
+        width: 75%;
+    }
 
     .leyenda {
         bottom: 80rem;
@@ -520,7 +558,7 @@
     .formprofile1 {
         margin: 0;
         margin-left: 1.2rem;
-        width: max-content;
+        width: 100%;
     }
 
     .formprofile2 {
@@ -549,6 +587,8 @@
         width: 19rem;
         padding-left: 1rem;
         margin-left: 1rem;
+        overflow: auto;
+
     }
 
     .form1 h2 {
@@ -671,7 +711,11 @@
 
 @media (width: 430px) {
     .formprofile1 {
-        margin-left: 2.4rem;
+        margin-left: 1rem;
+        width: 90%;
+    }
+    .alert1{
+        width: 85%;
     }
 }
 
