--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -57,16 +57,15 @@
     background: none;
     border: none;
 }
-.check{
+.check1{
     width: 80%;
     background: linear-gradient(to right, rgb(3, 180, 211), rgb(2, 80, 116));
-
     border-radius: 1rem;
     padding: 1rem;
     
 }
 
-#check{
+#check1{
     color: white;
     font-size: 1.3rem;
     width: 100%;
@@ -87,13 +86,13 @@
 
 @media(max-width: 767px){
 
-    .check{
+    .check1{
         margin-left: 1rem;
         width: 100%;
         text-align: center;
     }
 
-    #check{
+    #check1{
         margin-left: 0;
         width: 100%;
     }
