--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -31,7 +31,7 @@
     text-align: center;
     background: linear-gradient(to right, rgb(3, 180, 211), rgb(2, 80, 116));
     border-radius: 1rem;
-
+    cursor: pointer;
 }
 
 .t h3 {
@@ -86,6 +86,7 @@
         font-size: 1.4rem;
         padding: 1rem;
     }
+
 }
 
 
