--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -11,10 +11,20 @@ img {
     max-width: 100%;
     display: flex;
 }
+.errorRegister{
+    color: white;
+    font-family: 'Lato', sans-serif;
+    background-color: rgb(255, 81, 0);
+    border-radius: 1rem;
+    padding: 1px;
+    margin-top: 1rem;
+}
 
 .imageblog img {
     width: 50rem;
 }
+
+
 
 .imageblog {
     margin-left: 5rem;
@@ -22,7 +32,7 @@ img {
 
 .formp4 {
     margin-left: 10rem;
-    margin-top: 5rem;
+    margin-top: 2rem;
     background-color: rgb(54, 54, 54);
     padding-left: 4rem;
     padding-right: 4rem;
@@ -137,9 +147,10 @@ img {
 
 @media (width: 430px){
     .formp4{
-        margin-left: 1.4rem;
         border-radius: 1rem;
+        margin-left: 1.4rem;
     }    
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
