--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -22,6 +22,7 @@
     height: 25rem;
     margin-top: 10rem;
 }
+
 .slot a{
     color: rgb(78, 78, 196);
 }
@@ -85,7 +86,6 @@
     font-size: 4rem;
     text-align: center;
     margin-bottom: 1rem;
-
 }
 
 #direccion input {
@@ -165,12 +165,20 @@
     border-style: none;
 }
 
+.slot button{
+    cursor: pointer;
+}
+
 @media(max-width: 768px) {
 
     .alertaverif h1 {
         margin-left: 0;
         margin-left: 2rem;
         font-size: 1.5rem;
+    }
+
+    .formverif input{
+        width: 80%;
     }
 
     .alertaverif p {
@@ -231,19 +239,23 @@
 
     #enviar {
         margin-top: 2rem;
-        margin-left: 4rem;
+        margin-left: 4.5rem;
     }
+
+   
 
     .formverif form {
         max-width: fit-content;
     }
 }
 
-@media (width: 430px) {
-    .formverif {
-        margin-left: 2rem;
+
+@media (width: 430px){
+    #enviar{
+        margin-left: 6rem;
     }
 }
+
 
 
 
@@ -285,7 +297,10 @@
         margin-left: 4rem;
         margin-top: 4rem;
         width: 40rem;
-        height: 63rem;
+    }
+
+    .formverif input{
+        width: 100%;
     }
 
     #direccion input {
