--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -10,7 +10,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 3rem;
     font-weight: 700;
-    width: 90%;
+    width: 100rem;
     padding: 0 2rem;
     border-radius: 1rem;
 }
@@ -102,12 +102,14 @@
 
 .form1 h2 {
     color: rgb(2, 80, 116);
-    background-color: white;
+    background-color: rgb(103, 103, 103);
     border-radius: 1rem;
+    color: white;
+    font-weight: 700;
     width: 23rem;
     margin-left: 3rem;
     margin-top: 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding-left: 1rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -421,7 +423,7 @@
 @media only screen and (max-width: 767px) {
 
     .alert1{
-        width: 75%;
+        width: 80%;
     }
 
     .leyenda {
@@ -592,7 +594,7 @@
     }
 
     .form1 h2 {
-        font-size: 1.8rem;
+        font-size: 1.2rem;
     }
 
     .form1,
@@ -707,6 +709,9 @@
         margin-left: 2rem;
     }
 
+    .formprofile1{
+        margin-left: 0;
+    }
 }
 
 @media (width: 430px) {
@@ -884,7 +889,8 @@
     }
 
     .form1 h2 {
-        font-size: 1.8rem;
+        font-size: 1.3rem;
+        width: 80%;
     }
 
     .form1 {
@@ -1156,6 +1162,7 @@
 
     .form1 h2 {
         font-size: 1.8rem;
+        width: 90%;
     }
 
     .form1 {
@@ -1254,6 +1261,11 @@
 
     .alerta {
         margin-left: 2rem;
+    }
+
+    .alert1{
+        width: 30rem;
+        margin-bottom: 40rem;
     }
 }
 
@@ -1406,6 +1418,10 @@
 
     .alerta {
         margin-left: 6rem;
+    }
+
+    .alert1{
+        width: 100%;
     }
 }
 
