--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -123,6 +123,8 @@ a {
     }
 }
 
+
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     #iconbar {
         display: block;
@@ -220,9 +222,27 @@ a {
     }
 }
 
+@media only screen and (min-width: 1200px) and (max-width: 1299px) {
+    .imagenlogo img{
+        margin-left: 1rem;
+    }
+    .imagenlogo{
+        width: max-content;
+    }
+    .links{
+        margin-left: 1rem;
+    }
 
+    .links h2{
+        font-size: 1.5rem;
+    }
 
-@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+    #session{
+        margin-left: 1rem;
+    }
+}
+
+@media only screen and (min-width: 1300px) and (max-width: 1700px) {
     .imagenlogo img {
         width: 25rem;
     }
