--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -124,6 +124,10 @@
         position: relative;
         right: 3rem;
     }
+
+    #scrolleable3{
+        padding-left: 1.5rem;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
