--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -1,7 +1,5 @@
 .verificacioncontainer {
     margin-top: 5rem;
-    background-image: url('../assets/fondoblanco.webp');
-    background-repeat: round;
     display: flex;
 }
 
@@ -75,8 +73,12 @@
     border-radius: 3rem;
     margin-left: 10rem;
     margin-top: 2rem;
-    height: 65rem;
     margin-bottom: 2rem;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .formverif h1 {
@@ -100,7 +102,7 @@
     margin-left: 1rem;
 }
 
-.formverif input {
+.formverif input, .formverif select {
     padding: 0rem 1rem;
     padding-top: 1.3rem;
     padding-bottom: 1.3rem;
@@ -134,6 +136,10 @@
     margin-bottom: 2rem;
 }
 
+#select input[type="file"] {
+    color: transparent;
+  }
+
 #checkb input {
     width: fit-content;
     margin-right: 1rem;
@@ -160,9 +166,20 @@
     font-size: 3.5rem;
     border-radius: 1rem;
     width: 20rem;
-    margin-top: 1rem;
+    margin-top: 4rem;
+    margin-bottom: 10rem;
     margin-left: 7rem;
     border-style: none;
+}
+
+#selectImage{
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    background-color: rgb(85, 197, 85);    
+    padding:1rem;
+    border-radius: 1rem;
 }
 
 .slot button{
@@ -171,10 +188,17 @@
 
 @media(max-width: 767px) {
 
+
+
     .alertaverif h1 {
         margin-left: 0;
         margin-left: 2rem;
         font-size: 1.5rem;
+    }
+
+    .slot{
+        margin-left: 2rem;
+        width: 70%;
     }
 
     .formverif input{
@@ -213,7 +237,10 @@
     .formverif {
         margin-left: 0rem;
         width: 100%;
-        height: 90rem;
+    }
+    
+    #selectImage{
+        margin-left: 2rem;
     }
 
     #direccion input {
@@ -221,13 +248,13 @@
     }
 
     #select {
-        margin-left: 3rem;
-        width: 16rem;
+        margin-left: 2rem;
+        width: 80%;
 
     }
 
     #checkb p {
-        width: 14rem;
+        width: 80%;
     }
 
     #enviar button {
@@ -312,7 +339,7 @@
     }
 
     #checkb p {
-        width: 14rem;
+        width: 100%;
     }
 
     #enviar button {
@@ -389,7 +416,7 @@
     }
 
     #checkb p {
-        width: 14rem;
+        width: 100%;
     }
 
     #enviar button {
