--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -561,6 +561,10 @@
         margin: 0;
         margin-left: 1.2rem;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .formprofile2 {
