--- a/src/styles/ModalProfile2.css
+++ b/src/styles/ModalProfile2.css
@@ -30,11 +30,11 @@
 }
 
 .caja2 h1{
-    background-color: white;
+    background-color: rgb(84, 84, 84);
     width: 70%;
     padding: 1rem;
     border-radius: 1rem;
-    color: rgb(0, 71, 113)
+    color: rgb(255, 255, 255)
 }
 
 .caja2 label{
