--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -1,31 +1,34 @@
-.caja4{
+.caja4 {
     width: 50%;
     flex: 1;
 }
 
-.caja4 p{
+.caja4 p {
     font-size: 1.2rem;
     margin-bottom: .8rem;
 }
-.caja4 input{
+
+.caja4 input {
     font-size: 1.3rem;
     border-radius: .5rem;
-    width: 10rem;
+    width: 20rem;
     padding: .5rem 0 .5rem 0;
     padding-left: 1rem;
+}
 
+#scrolleable4 {
+    width: 40%;
 }
 
 
-
-.continuar5 button{
+.continuar5 button {
     background: none;
     border: none;
     margin: 0;
     padding: 0;
 }
 
-.check2{
+.check2 {
     background: linear-gradient(to right, rgb(3, 180, 211), rgb(2, 80, 116));
     padding: 0.5rem 1rem;
     border-radius: 1rem;
@@ -36,66 +39,183 @@
     cursor: pointer;
 }
 
-.modal4{
+.modal4 {
     display: flex;
     flex-wrap: wrap;
     font-family: 'Lato';
 }
 
-#beneficiario{
+#beneficiario {
     background-color: rgb(2, 80, 116);
     padding-left: 1rem;
     border-radius: 1rem;
     cursor: pointer;
 }
 
-#db{
+#db {
     font-size: 2rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     text-align: center;
 }
 
-.continuar5{
-    margin-left: 2rem;
+.continuar5 {
+    margin-left: 13rem;
     font-size: 2rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
 }
 
-#x{
+
+
+#x {
     font-size: 1.4rem;
     font-family: 'Lato', sans-serif;
 }
 
-@media (max-width : 767px){
-    #scrolleable4{
+@media (max-width : 767px) {
+    #scrolleable4 {
         padding-left: 1rem;
     }
 
-    #x{
+    #x {
         font-size: 2rem;
     }
-    .caja4{
+
+    .caja4 {
         flex: 0;
         width: 100%;
     }
-    .modal4{
+
+    .modal4 {
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
     }
 
-    .caja4 input{
+    .caja4 input {
         width: 100%;
     }
-    #beneficiario{
+
+    #beneficiario {
         padding: 1rem;
         margin-bottom: 0;
     }
-    .continuar5{
+
+    .continuar5 {
         margin-left: 0;
         position: relative;
         right: 1rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 990px) {
+    #scrolleable4 {
+        padding-left: 1rem;
+    }
+
+    #x {
+        font-size: 2rem;
+    }
+
+    .caja4 {
+        flex: 0;
+        width: 100%;
+    }
+
+    .modal4 {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+
+    .caja4 input {
+        width: 100%;
+    }
+
+    #beneficiario {
+        padding: 1rem;
+        margin-bottom: 0;
+    }
+
+    .continuar5 {
+        margin-left: 0rem;
+    }
+}
+
+@media (min-width: 991px) and (max-width: 1199px){
+    #scrolleable4 {
+        padding-left: 1rem;
+    }
+
+    #x {
+        font-size: 2rem;
+    }
+
+    .caja4 {
+        flex: 0;
+        width: 100%;
+    }
+
+    .modal4 {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+
+    .caja4 input {
+        width: 100%;
+    }
+
+    #beneficiario {
+        padding: 1rem;
+        margin-bottom: 0;
+    }
+
+    .continuar5 {
+        margin-left: 2.5rem;
+    }
+} 
+
+@media (min-width: 1200px) and (max-width: 1599px) {
+    .caja4 input {
+        font-size: 1.3rem;
+        border-radius: .5rem;
+        width: 15rem;
+        padding: .5rem 0 .5rem 0;
+        padding-left: 1rem;
+    }
+
+    #scrolleable4 {
+        width: 40%;
+    }
+
+    .continuar5 {
+        margin-left: 6rem;
+        font-size: 2rem;
+        font-family: 'Lato', sans-serif;
+        font-weight: 700;
+    }
+
+}
+
+@media (min-width: 1600px) and (max-width: 1800px) {
+    .caja4 input {
+        font-size: 1.3rem;
+        border-radius: .5rem;
+        width: 15rem;
+        padding: .5rem 0 .5rem 0;
+        padding-left: 1rem;
+    }
+
+    #scrolleable4 {
+        width: 40%;
+    }
+
+    .continuar5 {
+        margin-left: 9rem;
+        font-size: 2rem;
+        font-family: 'Lato', sans-serif;
+        font-weight: 700;
     }
 }
